# full-stack-to-do-app

./: .editorconfig  .env.example  .gitignore  COMPONENT_ENHANCEMENT_ANALYSIS.md  FINAL_SUMMARY.md  GRADIENT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INITIALIZATION_COMPLETE.md  MODERN_UI_UX_PATTERNS_RESEARCH.md  Makefile  PHASE_6_COMPLETE.md  PHASE_8_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  RESPONSIVE_DESIGN_IMPROVEMENT_PLAN.md  SETUP_CHECKLIST.md  UI_POLISH_COMPLETE_SUMMARY.md  UI_UX_IMPROVEMENT_PLAN.md  check_ports.py  debug_chat.py  debug_chat_detailed.py  docker-compose.yml  gen_token.py  generate_token.py  package-lock.json  package.json  quick-start.bat  quick-start.sh  simple_test_flow.py  start_app.bat  test_after_fix.py  test_agent_directly.py  test_chat_endpoint.py  test_connection.py  test_full_flow.py  test_regex_patterns.py  test_task_operations.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  backend_test_output.txt  check_users.py  create_missing_tables.py  create_missing_tables.sql  create_test_user.py  create_test_user_id9.py  debug_agents.py  debug_db.py  debug_task_service.py  ensure_all_tables.py  ensure_chat_tables.py  ensure_tables.py  import_test_output.txt  init_database.py  init_db.py  initialize_test_user.py  pyproject.toml  requirements.txt  run_backend.py  start_backend.bat  start_server.py  test_agent_in_dir.py  test_api.py  test_api_conditions.py  test_backend.py  test_backend_detailed.py  test_backend_simple.py  test_backend_startup.py  test_db_connection.py  test_direct_agent.py  test_import.py  test_task_creation.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_migration.py  002_create_users_table.py  003_create_refresh_tokens_table.py  004_create_verification_tokens_table.py  005_create_password_reset_tokens_table.py  006_create_login_history_table.py  2026_01_09_0953-a041627b8068_add_tags_column_to_tasks_table.py  2026_01_09_1529-c6b5568373fa_convert_datetime_columns_to_timezone_.py  2026_01_15_1103-e68b80f10a45_merge_heads.py  (+2 more)
backend/app/: celery_app.py  main.py
backend/tests/: conftest.py  test_tasks.py
(+269 files in other folders)
